# DistPipelineFWK2

./: .gitignore  CMakeLists.txt  README.md
modules/: ArduinoToolchain.cmake  FindAllegro.cmake  FindNetCDF.cmake  FindNgSpice.cmake  FindRtMidi.cmake  PlatformIntrospection.cmake
src/: CMakeLists.txt  net_cdf.cpp  test_concept.cpp
src/core/: CMakeLists.txt  base_filter.hpp  base_node.hpp  base_source.hpp  base_splitter.hpp  base_sync_join.hpp  command_node.h  data_packet_types.h  node_factory.hpp
src/dsp/: CMakeLists.txt  dfrft_filter.hpp  dft_filter.hpp  idft_filter.hpp  pid_filter.hpp  power_filter.hpp  quadrature_filter.hpp  standards.cpp  standards.h
src/dsp/fourier/: analytic_num_ft.cpp  analytic_num_ft.h  dft_periodic.cpp  dft_periodic.h  ft_utils.cpp  ft_utils.h
src/dsp/fractional_fourier/: dfrft_commons.cpp  dfrft_commons.h  dfrft_cublas.cpp  dfrft_cublas.h  dfrft_gsl.cpp
src/dsp/interpolation/: gsl_1d_interpol.cpp  gsl_1d_interpol.h  gsl_1d_interpol_base.cpp  i_interpol.h
src/executables/: CMakeLists.txt
src/executables/branches/: CMakeLists.txt  tar_01.cpp  tar_02.cpp
src/executables/demo/: CMakeLists.txt
src/executables/demo/arduino/: CMakeLists.txt  arduino.cpp
src/executables/demo/arduino/board/: CMakeLists.txt  main.cpp
src/executables/demo/arduino/host/: CMakeLists.txt  main.cpp
src/executables/demo/esp8266/: CMakeLists.txt  firmware.cpp.cpp
src/executables/demo/ngspice/: CMakeLists.txt  main.cpp  ngspice_src.cpp  ngspice_src.h  rc.cir  spinit
src/executables/demo/redpitaya/: CMakeLists.txt  main.cpp  scpi_cli.hpp
src/executables/demo/thermostat/: CMakeLists.txt  hw_state_tracker.cpp  hw_state_tracker.h  messages.h  peltier_hardware_filter.cpp  peltier_hardware_filter.h  peltier_model.cpp  peltier_model.h  peltier_model_filter.cpp  peltier_model_filter.h  pid.cpp  sys_monitor_filter.cpp  sys_monitor_filter.h
src/executables/demo/udp/: CMakeLists.txt  main.cpp
src/executables/tutorial/: 00_staticplot.cpp  01_core.cpp  02_splitjoin.cpp  03_leakage.cpp  04_plotscope.cpp  05_shift.cpp  06_quadrature.cpp  07_chirp.cpp  08_nft.cpp  09_midi.cpp  CMakeLists.txt
src/graphics/: CMakeLists.txt  commons.cpp  commons.h  genoscdevice.hpp  plotscope.cpp  plotscope.h  renderer.hpp  simplescope.cpp  simplescope.h  window.hpp
src/graphics/scope_messages/: psimsg.h  psmsgmultisig_txt.cpp  psmsgmultisig_txt.h  psmsgnsig_txt.cpp  psmsgnsig_txt.h
src/sources/: midi_port_src.hpp  serial_port_src.hpp  src_serial.hpp  src_udp.hpp
