

add_executable (ex_01_core "01_core.cpp")
target_link_libraries(ex_01_core ${CMAKE_THREAD_LIBS_INIT})
set_property(TARGET ex_01_core PROPERTY CXX_STANDARD 11)

add_executable (ex_02_splitjoin "02_splitjoin.cpp")
target_link_libraries(ex_02_splitjoin ${CMAKE_THREAD_LIBS_INIT})
set_property(TARGET ex_02_splitjoin PROPERTY CXX_STANDARD 11)

add_executable (ex_05_shift "05_shift.cpp")
target_link_libraries(ex_05_shift ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_05_shift ${Boost_LIBRARIES})
target_link_libraries(ex_05_shift ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(ex_05_shift ${Boost_SYSTEM_LIBRARY})
target_link_libraries(ex_05_shift lib_dsp lib_graphics)
set_property(TARGET ex_05_shift PROPERTY CXX_STANDARD 11)


add_executable (ex_06_quadrature "06_quadrature.cpp")
  target_link_libraries(ex_06_quadrature ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(ex_06_quadrature ${Boost_LIBRARIES})
  target_link_libraries(ex_06_quadrature ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(ex_06_quadrature ${Boost_SYSTEM_LIBRARY})
  target_link_libraries(ex_06_quadrature lib_dsp lib_graphics)
set_property(TARGET ex_06_quadrature PROPERTY CXX_STANDARD 11)

add_executable (ex_03_leakage "03_leakage.cpp")
target_link_libraries(ex_03_leakage ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_03_leakage ${Boost_LIBRARIES})
target_link_libraries(ex_03_leakage ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(ex_03_leakage ${Boost_SYSTEM_LIBRARY})
target_link_libraries(ex_03_leakage ${ALLEGRO_LIBRARIES})
target_link_libraries(ex_03_leakage ${GSL_LIBRARIES})
target_link_libraries(ex_03_leakage lib_dsp lib_graphics)
set_property(TARGET ex_03_leakage PROPERTY CXX_STANDARD 11)

add_executable (ex_07_chirp "07_chirp.cpp")
  target_link_libraries(ex_07_chirp ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(ex_07_chirp ${Boost_LIBRARIES})
  target_link_libraries(ex_07_chirp ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(ex_07_chirp ${Boost_SYSTEM_LIBRARY})
  target_link_libraries(ex_07_chirp ${ALLEGRO_LIBRARIES})
  target_link_libraries(ex_07_chirp ${GSL_LIBRARIES})
  target_link_libraries(ex_07_chirp lib_dsp lib_graphics)
set_property(TARGET ex_07_chirp PROPERTY CXX_STANDARD 11)

add_executable (ex_04_plotscope "04_plotscope.cpp")
target_link_libraries(ex_04_plotscope ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_04_plotscope ${Boost_LIBRARIES})
target_link_libraries(ex_04_plotscope ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(ex_04_plotscope ${Boost_SYSTEM_LIBRARY})
target_link_libraries(ex_04_plotscope ${Boost_THREAD_LIBRARY})
target_link_libraries(ex_04_plotscope ${ALLEGRO_LIBRARIES})
target_link_libraries(ex_04_plotscope ${GSL_LIBRARIES})
target_link_libraries(ex_04_plotscope lib_graphics)
set_property(TARGET ex_04_plotscope PROPERTY CXX_STANDARD 11)

add_executable (ex_08_nft "08_nft.cpp")
target_link_libraries(ex_08_nft ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_08_nft ${Boost_LIBRARIES})
target_link_libraries(ex_08_nft ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(ex_08_nft ${Boost_SYSTEM_LIBRARY})
target_link_libraries(ex_08_nft ${Boost_THREAD_LIBRARY})
target_link_libraries(ex_08_nft ${ALLEGRO_LIBRARIES})
target_link_libraries(ex_08_nft ${GSL_LIBRARIES})
target_link_libraries(ex_08_nft lib_graphics)
set_property(TARGET ex_08_nft PROPERTY CXX_STANDARD 11)

add_executable (ex_09_midi "09_midi.cpp")
target_link_libraries(ex_09_midi ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_09_midi ${RTMIDI_LIBRARIES})
set_property(TARGET ex_09_midi PROPERTY CXX_STANDARD 11)

add_executable (ex_00_staticplot "00_staticplot.cpp")
set_property(TARGET ex_00_staticplot PROPERTY CXX_STANDARD 11)