add_executable (demo_udp "main.cpp")
target_link_libraries(demo_udp ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(demo_udp ${Boost_LIBRARIES})
target_link_libraries(demo_udp ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(demo_udp ${Boost_SYSTEM_LIBRARY})
target_link_libraries(demo_udp ${Boost_THREAD_LIBRARY})
target_link_libraries(demo_udp ${ALLEGRO_LIBRARIES})
target_link_libraries(demo_udp ${GSL_LIBRARIES})
target_link_libraries(demo_udp lib_dsp lib_graphics)
set_property(TARGET demo_udp PROPERTY CXX_STANDARD 11)